--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "eslint-plugin-react": "^5.1.1",
     "react-hot-loader": "^3.0.0-beta.2",
@@ -36,10 +35,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "mobx": "^2.2.2",
-    "mobx-react": "^3.3.1",
-    "mobx-react-devtools": "^4.2.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "deku": "^1.0.0",
+    "mobx": "^2.2.2"
   }
 }
