--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "mobx-react-boilerplate",
+  "name": "mobx-deku-boilerplate",
   "version": "1.0.0",
-  "description": "Boilerplate for MobX + React project with JSX, ES6 compilation and hot code reloading",
+  "description": "Boilerplate for MobX + Deku project with JSX, ES6 compilation and hot code reloading",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mobxjs/mobx-react-boilerplate.git"
+    "url": "https://github.com/orrybaram/mobx-deku-boilerplate.git"
   },
   "keywords": [
-    "react",
-    "reactjs",
+    "deku",
+    "dekujs",
     "boilerplate",
     "mobx",
     "starter-kit"
   ],
-  "author": "Michel Weststrate <mweststrate@gmail.com> (http://github.com/mweststrate)",
+  "author": "Orry Baram <orrybaram@gmail.com> (http://github.com/orrybaram)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mobxjs/mobx/issues"
+    "url": "https://github.com/orrybaram/mobx-deku-boilerplate/issues"
   },
-  "homepage": "http://mobxjs.github.com/mobx",
+  "homepage": "https://github.com/orrybaram/mobx-deku-boilerplate/",
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-1": "^6.5.0",
-    "eslint-plugin-react": "^5.1.1",
-    "react-hot-loader": "^3.0.0-beta.2",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "deku": "^1.0.0",
+    "magic-virtual-element": "^1.0.6",
     "mobx": "^2.2.2"
   }
 }
