--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Boilerplate for MobX + Deku project with JSX, ES6 compilation and hot code reloading",
   "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
+    "start": "node bin/server.js",
+    "lint": "semistandard | snazzy"
   },
   "repository": {
     "type": "git",
@@ -25,11 +25,14 @@
   "homepage": "https://github.com/orrybaram/mobx-deku-boilerplate/",
   "devDependencies": {
     "babel-core": "^6.9.1",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-1": "^6.5.0",
+    "semistandard": "^8.0.0",
+    "snazzy": "^4.0.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -39,5 +42,8 @@
     "magic-virtual-element": "^1.0.6",
     "mobx": "^2.2.2",
     "mobx-deku": "^1.0.1"
+  },
+  "semistandard": {
+    "parser": "babel-eslint"
   }
 }
