--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "postcss-loader": "^0.9.1",
     "semistandard": "^8.0.0",
     "snazzy": "^4.0.0",
     "style-loader": "^0.13.1",
